--- a/django/connectedin/perfis/templates/base.html
+++ b/django/connectedin/perfis/templates/base.html
@@ -12,8 +12,8 @@
         <div class="container">
             <div class="header">
                 <ul class = "nav nav-pills pull-right">
-                    <li><a href="{% url 'index' %}">{{perfil_logado.nome}}</a></li>
-                    <li><a href="/logout/">Logout</a></li>
+                    <li><a href="{% url 'index' %}">{{user.perfil.nome}}</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
                 <h3 class="text-muted">Connectedin</h3>
             </div>
