--- a/django/connectedin/usuarios/templates/registrar.html
+++ b/django/connectedin/usuarios/templates/registrar.html
@@ -5,26 +5,26 @@
         <h2 class="form-signin-heading">Crie seu usuário</h2>
         {% csrf_token %}
         <input id="id_email" name="email" type="text"
-         class="form-control" placeholder="Email *" required>
+         class="form-control" placeholder="Email *" required value={{form.email.value}}>
 
         <input id="id_nome" name="nome" type="text"
-         class="form-control" placeholder="Nome *" required> 
+         class="form-control" placeholder="Nome *" required value={{form.nome.value}}> 
 
         <input id="id_senha" name="senha" type="password"
-         class="form-control" placeholder="Senha *" required> 
+         class="form-control" placeholder="Senha *" value={{form.senha.value}}> 
 
         <input id="id_telefone" name="telefone" type="text"
-         class="form-control" placeholder="Telefone"> 
+         class="form-control" placeholder="Telefone" value={{form.telefone.value}} > 
 
         <input id="id_nome_empresa" name="nome_empresa" type="text"
-         class="form-control" placeholder="Empresa"> 
+         class="form-control" placeholder="Empresa" value={{form.nome_empresa.value}}> 
 
         <hr/>
         {% if form.erros %}
 
-            <div class="alert alert-danger">
+            <div class="alert alert-danger  ">
                 <button type="button" class="close"> &times;</button>
-                {{form.non_fild_erros}}
+                {{form.non_field_errors}}
             </div>
 
         {% endif %}
